--- a/PBL6/Application/ViewControllers/Search/SearchVC.xib
+++ b/PBL6/Application/ViewControllers/Search/SearchVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -22,6 +22,7 @@
             <connections>
                 <outlet property="backButton" destination="tBl-3N-oI9" id="ZfZ-UW-89C"/>
                 <outlet property="collectionView" destination="KOW-xo-OhA" id="zmt-L3-Qgz"/>
+                <outlet property="headerView" destination="ocn-zP-swt" id="LQ0-DD-xje"/>
                 <outlet property="searchButton" destination="rcd-wX-nWT" id="btG-3v-zF8"/>
                 <outlet property="searchTextField" destination="NhV-nq-IYC" id="8kX-E1-H4x"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
